fix(core): legend alignment incorrect initial rendering

--- a/packages/core/src/styles/components/_legend.scss
+++ b/packages/core/src/styles/components/_legend.scss
@@ -5,6 +5,7 @@ div.#{$prefix}--#{$charts-prefix}--legend {
 	flex-wrap: wrap;
 
 	&[data-name='legend-items'] {
+	    width: 100%;
 		margin: -5px;
 	}
 
